cabal-version:       2.4
name:                tblis-hs
version:             0.0.0.0
synopsis:            Haskell bindings to TBLIS library for tensor operations
description:         Haskell bindings to TBLIS library for tensor operations
homepage:            https://github.com/twesterhout/tblis-hs
bug-reports:         https://github.com/twesterhout/tblis-hs/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <>
copyright:           2020 Tom Westerhout
category:            [Math, Concurrency]
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3
                     GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/twesterhout/tblis-hs.git

common common-options
  build-depends:       base >= 4.12.0.0 && < 4.15
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     TblisHs

executable tblis-hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       tblis-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite tblis-hs-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       tblis-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark tblis-hs-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , tblis-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
